@@ -2,6 +2,13 @@
   * v2.1.4
   ***************************
 
+    * Bugfix CORE-2640
+        A regular deadlock may not be detected by the lock manager under some conditions,
+        thus resulting in a hang
+      Contributor(s):
+        Vlad Khorsun <hvlad at users.sourceforge.net>
+        Dmitry Yemanov <dimitr at firebirdsql.org>
+
     * Bugfix CORE-2635
         Unique index with a lot of NULL keys can be corrupted at level 1
       Contributor(s):
